tests/aster/x/zig/match_full.out
tests/aster/x/zig/match_full.zig:13:26: error: cannot compare strings with ==
