tests/aster/x/zig/match_full.zig
// Generated by Mochi Zig transpiler on 2025-07-21 10:58 +0000
const std = @import("std");

fn classify(n: i64) []const u8 {
    return if (n == 0) "zero" else if (n == 1) "one" else "many";
}

pub fn main() void {
    const x = 2;
    const label = if (x == 1) "one" else if (x == 2) "two" else if (x == 3) "three" else "unknown";
    try std.io.getStdOut().writer().print("{any}\n", .{label});
    const day = "sun";
    const mood = if (day == "mon") "tired" else if (day == "fri") "excited" else if (day == "sun") "relaxed" else "normal";
    try std.io.getStdOut().writer().print("{any}\n", .{mood});
    const ok = true;
    const status = if (ok == true) "confirmed" else if (ok == false) "denied" else "";
    try std.io.getStdOut().writer().print("{any}\n", .{status});
    try std.io.getStdOut().writer().print("{any}\n", .{classify(0)});
    try std.io.getStdOut().writer().print("{any}\n", .{classify(5)});
}
